# demo-realtime

./: Cargo.toml  README.md  config.yaml
data/: roles.json  users.json
resources/: tables.rs
schemas/: realtime.graphql
source/: index.html  package-lock.json  package.json  vite.config.ts
source/src/: App.tsx  index.css  yeti.css
source/src/pages/: RealtimePage.tsx
src/: lib.rs
