# Cargo manifest for demo-realtime — Phase 48 static-crate shape.
#
# Dual-mode during the dylib → static migration window. yeti-compiler
# reads only [dependencies] when building the dylib (retiring in
# Phase 48 slice 5); cargo uses the full file when building the static
# library this crate compiles to.

[package]
name = "demo-realtime"
version = "0.1.0"
edition = "2024"
description = "Side-by-side comparison of WebSocket, SSE, REST polling, gRPC streaming, and MQTT"

[lib]
name = "demo_realtime"
path = "src/lib.rs"

[workspace]

[dependencies]
yeti-sdk = { path = "../../../Developer/yeti/crates/yeti-sdk", features = ["workspace"] }
serde_json = "1"
